Fix vulnerabilities so I stop getting annoying GitHub emails every week

--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
         <div id="experience-timeline">
             <div data-date="Jan 2019 – Present">
                 <h3>BlueSuit</h3>
-                <h4>Co-Founder/CTO</h4>
-                <p><i>Bringing the power of AI to commercial real estate brokers, teams, and investors</i></p><br/>
+                <h4>Co-Founder / CTO</h4>
+                <p><i>Bringing the power of AI to commercial real estate deal execution</i></p><br/>
                 <ul>
-                    <li>Architected and built the entire BlueSuit MVP (frontend, backend, and database)</li>
+                    <li>Wrote the frontend and backend code powering the successful BlueSuit Beta</li>
                     <li>Completed the 3-month <a href="https://www.techstars.com/content/accelerators/announcing-2019-class-colliers-proptech-accelerator-powered-techstars/">TechStars/Colliers Proptech Accelerator</a> with my cofounders</li>
-                    <li>More to come...</li>
+                    <li>Building a world-class product with a world-class technical team</li>
                 </ul>
             </div>
 
